Implemented a flow for granting administrative access.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -1,4 +1,6 @@
 {
+  "access-granted" : "Access granted",
+  "access-request-not-valid" : "Access request is not valid",
   "add-comment" : "Add Comment",
   "add-comments-need" : "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
   "add-connection" : "Add account",
@@ -24,6 +26,7 @@
   "ask" : "Ask",
   "ask-count" : "Ask {count} {count, plural, one {user} other {users}}",
   "ask-ellipsis" : "Ask...",
+  "asking-access-permissions" : "is asking to access your blog with the following permissions:",
   "ask-node" : "Ask {name}",
   "auto" : "Auto",
   "auto-hide-comments" : "Automatically hide comments",
@@ -51,6 +54,7 @@
   "cancel-request" : "Cancel the request",
   "cannot-resolve-name " : "Cannot resolve name:",
   "caption" : "Caption",
+  "careful-grant-access" : "Please be careful and don't grant access to any application you're not familiar with.",
   "change" : "Change",
   "change-date-time" : "Change Date/Time",
   "change-date-time-ellipsis" : "Change date/time...",
@@ -95,6 +99,7 @@
   },
   "complaint-status-colon" : "Complaint status:",
   "compress-images" : "Compress images",
+  "confirm" : "Confirm",
   "confirm-password" : "Confirm password",
   "connect" : "Log In",
   "connected" : "Logged in",
@@ -238,6 +243,7 @@
   "go-last-comment" : "Go to the last comment",
   "go-to" : "Go to...",
   "go-top" : "Go to the top",
+  "grant-access" : "Grant Access",
   "height" : "Height",
   "help" : "Help",
   "hide" : "Hide",
@@ -539,6 +545,7 @@
   "read-more" : "Read more...",
   "reason" : "Reason",
   "received-mail" : "Received the mail already",
+  "redirecting" : "Redirecting...",
   "register" : "Register",
   "register-different-name" : "Register a different name",
   "registered-name-secret" : "Registered Name Secret",
@@ -566,28 +573,28 @@
   "rotate-right" : "Rotate right",
   "save" : "Save",
   "scope" : {
-    "add-comment" : "Create comments owned by the node",
-    "add-post" : "Create posts owned by the node",
+    "add-comment" : "Create comments signed by your name",
+    "add-post" : "Create posts signed by your name",
     "all" : "All permissions",
     "block" : "Block and unblock people",
-    "delete-others-content" : "Delete any content not owned by the node, but stored on it",
-    "delete-own-content" : "Delete any content owned by the node",
+    "delete-others-content" : "Delete any content in your blog not created by you",
+    "delete-own-content" : "Delete any content created by you",
     "drafts" : "Use drafts",
     "friend" : "Add and remove friends and friend groups",
-    "grant" : "Grant administrative permission on this node to other nodes",
-    "name" : "Update the name of the node",
+    "grant" : "Grant access to this blog to others",
+    "name" : "Change the name of the blog",
     "other" : "Other permissions",
-    "plugins" : "Administrate plugins",
-    "react" : "Create and delete reactions owned by the node",
-    "remote-identify" : "Create cartes for authentication on other nodes",
+    "plugins" : "Administrate addons",
+    "react" : "Add and delete reactions signed by your name",
+    "remote-identify" : "Enter blogs of others under your name",
     "sheriff" : "Use sheriff's powers",
     "subscribe" : "Subscribe and unsubscribe to feeds",
     "tokens" : "Manage authentication tokens",
-    "update-comment" : "Modify comments owned by the node",
+    "update-comment" : "Modify your comments",
     "update-feeds" : "Modify status of stories in feeds",
-    "update-post" : "Modify posts owned by the node",
+    "update-post" : "Modify your posts",
     "update-profile" : "Change the profile",
-    "update-settings" : "Modify the node settings",
+    "update-settings" : "Modify settings",
     "upload-private-media" : "Upload a private media file",
     "upload-public-media" : "Upload a public media file",
     "user-lists" : "Modify lists of users",
@@ -595,9 +602,9 @@
     "view-content" : "View any content (posts, comments, reactions), except media files",
     "view-feeds" : "View all feeds and status of stories in them",
     "view-media" : "View any media file",
-    "view-people" : "View all contacts of the node",
+    "view-people" : "View all your contacts",
     "view-profile" : "View all fields of the profile",
-    "view-settings" : "View the node settings"
+    "view-settings" : "View settings"
   },
   "secret-code" : "Secret code",
   "secret-words" : "Secret Words",
@@ -904,6 +911,7 @@
   "used-by-addon" : "Used by add-on:",
   "user-asks-not-publish-complaint" : "User asks not to publish the complaint",
   "user-comments-hidden" : "This user's comments are hidden",
+  "validating-access-request" : "Validating access request",
   "verify-signature" : "Verify signature",
   "view-as-chart" : "View as chart",
   "view-as-list" : "View as list",
@@ -935,6 +943,7 @@
   "wrong-reset-token" : "Wrong secret code",
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
+  "you-can-close-page" : "You can close this page now.",
   "you-can-copy-token" : "You can now copy your new token. For security reasons, this cannot be done later.",
   "you-friends" : "You are friends",
   "you-no-longer-subscribed" : "You are no longer subscribed",
