--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -1,4 +1,6 @@
 {
+  "access-granted" : "Dostęp przyznany",
+  "access-request-not-valid" : "Żądanie dostępu jest nieprawidłowe",
   "add-comment" : "Dodaj komentarz",
   "add-comments-need" : "Aby dodać komentarze, musisz się <0>{signup}</0> lub <1>{connect}</1>",
   "add-connection" : "Dodaj konto",
@@ -24,6 +26,7 @@
   "ask" : "Zapytaj",
   "ask-count" : "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
   "ask-ellipsis" : "Zapytaj...",
+  "asking-access-permissions" : "prosi o dostęp do Twojego bloga z następującymi uprawnieniami:",
   "ask-node" : "Zapytaj {name}",
   "auto" : "Auto",
   "auto-hide-comments" : "Automatycznie ukrywaj komentarze",
@@ -51,6 +54,7 @@
   "cancel-request" : "Anuluj żądanie",
   "cannot-resolve-name " : "Nie można rozwiązać nazwy:",
   "caption" : "Podpis",
+  "careful-grant-access" : "Proszę zachować ostrożność i nie udzielać dostępu aplikacjom, których nie znasz.",
   "change" : "Zmień",
   "change-date-time" : "Zmień datę/czas",
   "change-date-time-ellipsis" : "Zmień datę/czas...",
@@ -95,6 +99,7 @@
   },
   "complaint-status-colon" : "Stan skargi",
   "compress-images" : "Kompresuj obrazy",
+  "confirm" : "Zatwierdzić",
   "confirm-password" : "Potwierdź hasło",
   "connect" : "Zaloguj się",
   "connected" : "Zalogowano",
@@ -238,6 +243,7 @@
   "go-last-comment" : "Przejdź do ostatniego komentarza",
   "go-to" : "Przejdź do...",
   "go-top" : "Przejdź na górę",
+  "grant-access" : "Przyznanie dostępu",
   "height" : "Wysokość",
   "help" : "Pomoc",
   "hide" : "Ukryj",
@@ -539,6 +545,7 @@
   "read-more" : "Czytaj więcej...",
   "reason" : "Powód",
   "received-mail" : "Otrzymano już maila",
+  "redirecting" : "Przekierowanie...",
   "register" : "Zarejestruj",
   "register-different-name" : "Zarejestruj inną nazwę",
   "registered-name-secret" : "Tajna nazwa zarejestrowana",
@@ -565,6 +572,40 @@
   "rotate-left" : "Obróć w lewo",
   "rotate-right" : "Obróć w prawo",
   "save" : "Zapisz",
+  "scope" : {
+    "add-comment" : "Utwórz komentarze podpisane Twoim imieniem",
+    "add-post" : "Utwórz posty podpisane Twoim imieniem",
+    "all" : "Wszystkie uprawnienia",
+    "block" : "Blokowanie i odblokowywanie osób",
+    "delete-others-content" : "Usuń wszystkie treści z bloga, które nie zostały utworzone przez Ciebie",
+    "delete-own-content" : "Usuń wszystkie treści utworzone przez Ciebie",
+    "drafts" : "Użyj szkiców",
+    "friend" : "Dodawanie i usuwanie znajomych i grup znajomych",
+    "grant" : "Udzielanie dostępu do tego bloga innym",
+    "name" : "Zmienianie nazwy bloga",
+    "other" : "Inne uprawnienia",
+    "plugins" : "Administrowanie dodatkami",
+    "react" : "Dodawaj i usuwaj reakcje podpisane Twoim imieniem",
+    "remote-identify" : "Wchodź na blogi innych pod Twoim imieniem",
+    "sheriff" : "Korzystanie z uprawnień szeryfa",
+    "subscribe" : "Subskrybowanie i anulowanie subskrypcji kanałów",
+    "tokens" : "Zarządzaj tokenami autoryzacyjnymi",
+    "update-comment" : "Modyfikuj swoje komentarze",
+    "update-feeds" : "Modyfikowanie statusu historii w kanałach",
+    "update-post" : "Modyfikuj swoje posty",
+    "update-profile" : "Zmienianie profilu",
+    "update-settings" : "Modyfikowanie ustawień",
+    "upload-private-media" : "Prześlij prywatny plik multimedialny",
+    "upload-public-media" : "Prześlij publiczny plik multimedialny",
+    "user-lists" : "Modyfikowanie list użytkowników",
+    "view-all" : "Wszystkie uprawnienia tylko do przeglądania",
+    "view-content" : "Wyświetlanie dowolnych treści (postów, komentarzy, reakcji), z wyjątkiem plików multimedialnych",
+    "view-feeds" : "Wyświetlanie wszystkich kanałów i statusu zawartych w nich historii",
+    "view-media" : "Wyświetlanie dowolnego pliku multimedialnego",
+    "view-people" : "Wyświetlanie wszystkich kontaktów",
+    "view-profile" : "Wyświetlanie wszystkich pól profilu",
+    "view-settings" : "Wyświetl ustawienia"
+  },
   "secret-code" : "Kod tajny",
   "secret-words" : "Tajne słowa",
   "select" : "Wybierz",
@@ -870,6 +911,7 @@
   "used-by-addon" : "Używane przez dodatek:",
   "user-asks-not-publish-complaint" : "Użytkownik prosi o niepublikowanie niniejszej skargi",
   "user-comments-hidden" : "Komentarze tego użytkownika są ukryte",
+  "validating-access-request" : "Weryfikacja żądania dostępu",
   "verify-signature" : "Zweryfikuj podpis",
   "view-as-chart" : "Wyświetl jako wykres",
   "view-as-list" : "Wyświetl jako listę",
@@ -901,6 +943,7 @@
   "wrong-reset-token" : "Nieprawidłowy kod sekretny",
   "yes" : "Tak",
   "you-at-home" : "Jesteś w swoim węźle domowym",
+  "you-can-close-page" : "Możesz teraz zamknąć tę stronę.",
   "you-can-copy-token" : "Możesz teraz skopiować swój nowy token. Ze względów bezpieczeństwa nie będzie to możliwe później.",
   "you-friends" : "Jesteście znajomymi",
   "you-no-longer-subscribed" : "Nie jesteś już subskrybentem",
