--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -1,4 +1,6 @@
 {
+  "access-granted" : "Доступ разрешён",
+  "access-request-not-valid" : "Запрос на доступ недействителен",
   "add-comment" : "Отправить",
   "add-comments-need" : "Чтобы комментировать, вам нужно <0>{signup}</0> или <1>{connect}</1>",
   "add-connection" : "Добавить аккаунт",
@@ -24,6 +26,7 @@
   "ask" : "Попросить",
   "ask-count" : "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
   "ask-ellipsis" : "Попросить...",
+  "asking-access-permissions" : "запрашивает доступ к вашему блогу со следующими полномочиями:",
   "ask-node" : "Попросить {name}",
   "auto" : "Авто",
   "auto-hide-comments" : "Автоматически скрывать комментарии",
@@ -51,6 +54,7 @@
   "cancel-request" : "Отменить запрос",
   "cannot-resolve-name " : "Не удалось опознать имя:",
   "caption" : "Заголовок",
+  "careful-grant-access" : "Пожалуйста, будьте осторожны и не предоставляйте доступ незнакомым приложениям.",
   "change" : "Изменить",
   "change-date-time" : "Изменить дату/время",
   "change-date-time-ellipsis" : "Изменить дату/время...",
@@ -95,6 +99,7 @@
   },
   "complaint-status-colon" : "Статус жалобы:",
   "compress-images" : "Сжимать картинки",
+  "confirm" : "Одобрить",
   "confirm-password" : "Подтверждение пароля",
   "connect" : "Войти",
   "connected" : "Вход выполнен",
@@ -238,6 +243,7 @@
   "go-last-comment" : "Перейти к последнему комментарию",
   "go-to" : "Перейти...",
   "go-top" : "Перейти вверх",
+  "grant-access" : "Предоставление доступа",
   "height" : "Высота",
   "help" : "Помощь",
   "hide" : "Скрыть",
@@ -539,6 +545,7 @@
   "read-more" : "Читать дальше...",
   "reason" : "Причина",
   "received-mail" : "Уже получил письмо",
+  "redirecting" : "Перенаправляю...",
   "register" : "Регистрация",
   "register-different-name" : "Зарегистрировать другое имя",
   "registered-name-secret" : "Секрет зарегистрированного имени",
@@ -565,6 +572,40 @@
   "rotate-left" : "Повернуть влево",
   "rotate-right" : "Повернуть вправо",
   "save" : "Сохранить",
+  "scope" : {
+    "add-comment" : "Создавать комментарии, подписанные вашим именем",
+    "add-post" : "Создавать посты, подписанные вашим именем",
+    "all" : "Все полномочия",
+    "block" : "Блокировать и разблокировать пользователей",
+    "delete-others-content" : "Удалять любой контент в вашем блоге, созданный не вами",
+    "delete-own-content" : "Удалять любой контент, созданный вами",
+    "drafts" : "Использовать черновики",
+    "friend" : "Добавлять и удалять друзей и группы друзей",
+    "grant" : "Предоставлять доступ к этому блогу другим",
+    "name" : "Изменять имя блога",
+    "other" : "Другие полномочия",
+    "plugins" : "Управлять дополнениями",
+    "react" : "Добавлять и удалять реакции, подписанные вашим именем",
+    "remote-identify" : "Заходить в чужие блоги под вашим именем",
+    "sheriff" : "Использовать полномочия шерифа",
+    "subscribe" : "Подписываться и отписываться на ленты",
+    "tokens" : "Управление токенами для аутентификации",
+    "update-comment" : "Изменять ваши комментарии",
+    "update-feeds" : "Изменять статус историй в лентах",
+    "update-post" : "Изменять ваши посты",
+    "update-profile" : "Изменять профиль",
+    "update-settings" : "Изменять настройки",
+    "upload-private-media" : "Загружать личные медиафайлы",
+    "upload-public-media" : "Загружать общедоступные медиафайлы",
+    "user-lists" : "Изменять списки пользователей",
+    "view-all" : "Все полномочия только для просмотра",
+    "view-content" : "Просматривать любой контент (посты, комментарии, реакции), кроме медиафайлов",
+    "view-feeds" : "Просматривать все ленты и статус историй в них",
+    "view-media" : "Просматривать любой медиа-файл",
+    "view-people" : "Просматривать все ваши контакты",
+    "view-profile" : "Просматривать все поля профиля",
+    "view-settings" : "Просматривать настройки"
+  },
   "secret-code" : "Секретный код",
   "secret-words" : "Секретные слова",
   "select" : "Выбрать",
@@ -870,6 +911,7 @@
   "used-by-addon" : "Используется дополнением:",
   "user-asks-not-publish-complaint" : "Пользователь просит не публиковать эту жалобу",
   "user-comments-hidden" : "Комментарии этого пользователя скрываются",
+  "validating-access-request" : "Проверка запроса на доступ",
   "verify-signature" : "Проверить подпись",
   "view-as-chart" : "В виде диаграммы",
   "view-as-list" : "В виде списка",
@@ -901,6 +943,7 @@
   "wrong-reset-token" : "Неправильный секретный код",
   "yes" : "Да",
   "you-at-home" : "Это ваш домашний блог",
+  "you-can-close-page" : "Теперь вы можете закрыть эту страницу.",
   "you-can-copy-token" : "Сейчас вы можете скопировать ваш новый токен. По соображениям безопасности, это нельзя будет сделать позднее.",
   "you-friends" : "Вы друзья",
   "you-no-longer-subscribed" : "Вы больше не подписаны",
