--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -1,4 +1,6 @@
 {
+  "access-granted" : "Доступ надано",
+  "access-request-not-valid" : "Запит на доступ недійсний",
   "add-comment" : "Відправити",
   "add-comments-need" : "Щоб коментувати, вам треба <0>{signup}</0> або <1>{connect}</1>",
   "add-connection" : "Додати акаунт",
@@ -24,6 +26,7 @@
   "ask" : "Попросити",
   "ask-count" : "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
   "ask-ellipsis" : "Попросити...",
+  "asking-access-permissions" : "просить доступ до вашого блогу з наступними дозволами:",
   "ask-node" : "Попросити {name}",
   "auto" : "Авто",
   "auto-hide-comments" : "Автоматично приховувати коментарі",
@@ -51,6 +54,7 @@
   "cancel-request" : "Скасувати запит",
   "cannot-resolve-name " : "Не вдалося розпізнати ім'я:",
   "caption" : "Заголовок",
+  "careful-grant-access" : "Будь ласка, будьте обережні та не надавайте доступ незнайомим програмам.",
   "change" : "Змінити",
   "change-date-time" : "Змінити дату/час",
   "change-date-time-ellipsis" : "Змінити дату/час...",
@@ -95,6 +99,7 @@
   },
   "complaint-status-colon" : "Статус скарги:",
   "compress-images" : "Стискати картинки",
+  "confirm" : "Схвалити",
   "confirm-password" : "Підтвердження пароля",
   "connect" : "Увійти",
   "connected" : "Увійшли",
@@ -238,6 +243,7 @@
   "go-last-comment" : "Перейти до останнього коментаря",
   "go-to" : "Перейти...",
   "go-top" : "Перейти догори",
+  "grant-access" : "Надання доступу",
   "height" : "Висота",
   "help" : "Допомога",
   "hide" : "Приховати",
@@ -539,6 +545,7 @@
   "read-more" : "Читати далі...",
   "reason" : "Причина",
   "received-mail" : "Вже отримав листа",
+  "redirecting" : "Перенаправляю...",
   "register" : "Реєстрація",
   "register-different-name" : "Зареєструвати інше ім'я",
   "registered-name-secret" : "Секрет зареєстрованого імені",
@@ -565,6 +572,40 @@
   "rotate-left" : "Повернути ліворуч",
   "rotate-right" : "Повернути праворуч",
   "save" : "Зберегти",
+  "scope" : {
+    "add-comment" : "Створювати коментарі, підписані вашим ім'ям",
+    "add-post" : "Створювати пости, підписані вашим ім'ям",
+    "all" : "Всі дозволи",
+    "block" : "Блокувати та розблоковувати користувачів",
+    "delete-others-content" : "Видаляти будь-який контент у вашому блозі, створений не вами",
+    "delete-own-content" : "Видаляти будь-який контент, створений вами",
+    "drafts" : "Використовувати чернетки",
+    "friend" : "Додавати та видаляти друзів і групи друзів",
+    "grant" : "Надавати доступ до цього блогу іншим",
+    "name" : "Змінювати им'я блогу",
+    "other" : "Інші дозволи",
+    "plugins" : "Керувати додатками",
+    "react" : "Додавати та видаляти реакції, підписані вашим ім'ям",
+    "remote-identify" : "Заходити у чужі блоги під вашим ім'ям",
+    "sheriff" : "Користуватись повноваженнями шерифа",
+    "subscribe" : "Підписуватись та відписуватись на стрічки",
+    "tokens" : "Керування токенами для автентифікації",
+    "update-comment" : "Змінювати ваші коментарі",
+    "update-feeds" : "Змінювати статус історій у стрічках",
+    "update-post" : "Змінювати ваші пости",
+    "update-profile" : "Змінювати профіль",
+    "update-settings" : "Змінювати налаштування",
+    "upload-private-media" : "Завантажувати приватні медіафайли",
+    "upload-public-media" : "Завантажувати загальнодоступні медіафайли",
+    "user-lists" : "Змінювати списки користувачів",
+    "view-all" : "Усі дозволи лише на перегляд",
+    "view-content" : "Переглядати будь-який контент (пости, коментарі, реакції), крім медіафайлів",
+    "view-feeds" : "Переглядати всі стрічки та статус історій у них",
+    "view-media" : "Переглядати будь-який медіафайл",
+    "view-people" : "Переглядати всі ваші контакти",
+    "view-profile" : "Переглядати всі поля профілю",
+    "view-settings" : "Переглядати налаштування"
+  },
   "secret-code" : "Секретний код",
   "secret-words" : "Секретні слова",
   "select" : "Обрати",
@@ -870,6 +911,7 @@
   "used-by-addon" : "Використовується додатком:",
   "user-asks-not-publish-complaint" : "Користувач просить не публікувати цю скаргу",
   "user-comments-hidden" : "Коментарі цього користувача приховуються",
+  "validating-access-request" : "Перевірка запиту на доступ",
   "verify-signature" : "Перевірити підпис",
   "view-as-chart" : "У вигляді діаграми",
   "view-as-list" : "У вигляді списку",
@@ -901,6 +943,7 @@
   "wrong-reset-token" : "Невірний секретний код",
   "yes" : "Так",
   "you-at-home" : "Це ваш домашній блог",
+  "you-can-close-page" : "Зараз ви можете закрити цю сторінку.",
   "you-can-copy-token" : "Зараз ви можете скопіювати ваш новий токен. З міркувань безпеки, це не можна буде зробити пізніше.",
   "you-friends" : "Ви друзі",
   "you-no-longer-subscribed" : "Ви більше не підписані",
