See and modify grants.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -23,6 +23,7 @@
   "allow-showing-post-google-play" : "<0>Allow</0> showing the <1>{name}</1>'s post \"{heading}\" on Android (Google Play).",
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
+  "application-name" : "Application name",
   "ask" : "Ask",
   "ask-count" : "Ask {count} {count, plural, one {user} other {users}}",
   "ask-ellipsis" : "Ask...",
@@ -409,6 +410,7 @@
   "no" : "No",
   "no-actions" : "No actions",
   "no-addons" : "No add-ons loaded.",
+  "no-applications" : "No applications.",
   "no-block" : "Do not block",
   "no-blocking" : "No blocking.",
   "node-name-not-exists" : "No node with such name exist.",
@@ -552,7 +554,6 @@
   "register-new-name" : "Register a New Name",
   "reject" : "Reject",
   "remind-later" : "Remind later",
-  "rename" : "Rename",
   "rename-token" : "Rename a Token",
   "reply" : "Reply",
   "reply-ellipsis" : "Reply...",
@@ -624,6 +625,7 @@
     "chapter" : {
       "comments" : "Comments",
       "general" : "General",
+      "grants" : "Access for Applications",
       "media" : "Media",
       "password" : "Password",
       "reactions" : "Reactions",
@@ -931,6 +933,7 @@
   "want-delete-token" : "Do you really want to delete the token \"{name}\"?",
   "want-disconnect" : "Do you really want to log out?",
   "want-forget-changes" : "Do you really want to forget all changes?",
+  "want-revoke-permissions" : "Do you really want to revoke all permissions from the application \"{name}\"?",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
   "where-go" : "Where do you want to go?",
