--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -23,6 +23,7 @@
   "allow-showing-post-google-play" : "<0>Zezwalaj</0> na wyświetlanie posta użytkownika <1>{name}</1> „{heading}” na Androidzie (Google Play).",
   "alt-text" : "Tekst alternatywny",
   "alt-text-button" : "Tekst alternatywny",
+  "application-name" : "Nazwa aplikacji",
   "ask" : "Zapytaj",
   "ask-count" : "Zapytaj {count} {count, plural, one {użytkownika} few {użytkowników} many {użytkowników} other {użytkowników}}",
   "ask-ellipsis" : "Zapytaj...",
@@ -409,6 +410,7 @@
   "no" : "Nie",
   "no-actions" : "Brak działań",
   "no-addons" : "Nie załadowano dodatków.",
+  "no-applications" : "Brak aplikacji.",
   "no-block" : "Nie blokuj",
   "no-blocking" : "Brak blokowania.",
   "node-name-not-exists" : "Nie istnieje węzeł o takiej nazwie.",
@@ -552,7 +554,6 @@
   "register-new-name" : "Zarejestruj nową nazwę",
   "reject" : "Odrzuć",
   "remind-later" : "Przypomnij mi później",
-  "rename" : "Zmień nazwę",
   "rename-token" : "Zmień nazwę tokena",
   "reply" : "Odpowiedz",
   "reply-ellipsis" : "Odpowiedz...",
@@ -624,6 +625,7 @@
     "chapter" : {
       "comments" : "Komentarze",
       "general" : "Ogólne",
+      "grants" : "Dostęp do aplikacji",
       "media" : "Media",
       "password" : "Hasło",
       "reactions" : "Reakcje",
@@ -931,6 +933,7 @@
   "want-delete-token" : "Czy na pewno chcesz usunąć token \"{name}\"?",
   "want-disconnect" : "Czy na pewno chcesz się wylogować?",
   "want-forget-changes" : "Czy na pewno chcesz zapomnieć o wszystkich zmianach?",
+  "want-revoke-permissions" : "Czy na pewno chcesz cofnąć wszystkie uprawnienia aplikacji \"{name}\"?",
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
   "where-go" : "Dokąd chcesz się udać?",
