--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -23,6 +23,7 @@
   "allow-showing-post-google-play" : "<0>Разрешить</0> показ поста <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "alt-text" : "Альтернативный текст",
   "alt-text-button" : "Альт. текст",
+  "application-name" : "Имя приложения",
   "ask" : "Попросить",
   "ask-count" : "Попросить {count} {count, plural, one {пользователя} other {пользователей}}",
   "ask-ellipsis" : "Попросить...",
@@ -409,6 +410,7 @@
   "no" : "Нет",
   "no-actions" : "Действий нет",
   "no-addons" : "Нет загруженных дополнений.",
+  "no-applications" : "Нет приложений.",
   "no-block" : "Не блокировать",
   "no-blocking" : "Нет блокировки.",
   "node-name-not-exists" : "Не существует блога с таким именем.",
@@ -552,7 +554,6 @@
   "register-new-name" : "Регистрация нового имени",
   "reject" : "Отклонить",
   "remind-later" : "Напомнить позже",
-  "rename" : "Переименовать",
   "rename-token" : "Переименовать токен",
   "reply" : "Ответить",
   "reply-ellipsis" : "Ответить...",
@@ -624,6 +625,7 @@
     "chapter" : {
       "comments" : "Комментарии",
       "general" : "Общие",
+      "grants" : "Доступ для приложений",
       "media" : "Медиа",
       "password" : "Пароль",
       "reactions" : "Реакции",
@@ -931,6 +933,7 @@
   "want-delete-token" : "Вы действительно хотите удалить токен \"{name}\"?",
   "want-disconnect" : "Вы действительно хотите выйти?",
   "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
+  "want-revoke-permissions" : "Вы действительно хотите лишить всех полномочий приложение \"{name}\"?",
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
   "where-go" : "Куда вы хотите пойти?",
