--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -23,6 +23,7 @@
   "allow-showing-post-google-play" : "<0>Дозволити</0> показ посту <1>{name}</1> \"{heading}\" на Android (Google Play).",
   "alt-text" : "Альтернативний текст",
   "alt-text-button" : "Альт. текст",
+  "application-name" : "Ім'я додатку",
   "ask" : "Попросити",
   "ask-count" : "Попросити {count} {count, plural, one {користувача} other {користувачів}}",
   "ask-ellipsis" : "Попросити...",
@@ -54,7 +55,7 @@
   "cancel-request" : "Скасувати запит",
   "cannot-resolve-name " : "Не вдалося розпізнати ім'я:",
   "caption" : "Заголовок",
-  "careful-grant-access" : "Будь ласка, будьте обережні та не надавайте доступ незнайомим програмам.",
+  "careful-grant-access" : "Будь ласка, будьте обережні та не надавайте доступ незнайомим додаткам.",
   "change" : "Змінити",
   "change-date-time" : "Змінити дату/час",
   "change-date-time-ellipsis" : "Змінити дату/час...",
@@ -409,6 +410,7 @@
   "no" : "Ні",
   "no-actions" : "Дій немає",
   "no-addons" : "Немає завантажених додатків.",
+  "no-applications" : "Жодних додатків.",
   "no-block" : "Не блокувати",
   "no-blocking" : "Немає блокування.",
   "node-name-not-exists" : "Не існує блогу з цим ім'ям.",
@@ -552,7 +554,6 @@
   "register-new-name" : "Реєстрація нового імені",
   "reject" : "Відхилити",
   "remind-later" : "Нагадати пізніше",
-  "rename" : "Перейменувати",
   "rename-token" : "Перейменувати токен",
   "reply" : "Відповісти",
   "reply-ellipsis" : "Відповісти...",
@@ -624,6 +625,7 @@
     "chapter" : {
       "comments" : "Коментарі",
       "general" : "Загальні",
+      "grants" : "Доступ для додатків",
       "media" : "Медіа",
       "password" : "Пароль",
       "reactions" : "Реакції",
@@ -931,6 +933,7 @@
   "want-delete-token" : "Ви дійсно бажаєте видалити токен \"{name}\"?",
   "want-disconnect" : "Ви дійсно бажаєте вийти?",
   "want-forget-changes" : "Ви дійсно бажаєте забути про всі зміни?",
+  "want-revoke-permissions" : "Ви дійсно бажаєте скасувати всі дозволи додатка \"{name}\"?",
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
   "where-go" : "Куди ви бажаєте піти?",
