--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -48,6 +48,9 @@
   "blocking-node" : "Блокировка {name}",
   "blocking-reason" : "Причина блокировки",
   "blocking-till" : "Блокировка до",
+  "blog" : {
+    "itself" : "Сам блог"
+  },
   "blog-moved" : "Похоже, что блог <b>{name}</b> переехал на новый адрес <b>{location}</b>. Хотите открыть блог на новом месте?",
   "bold" : "Полужирный",
   "bottom" : "В начало",
@@ -71,6 +74,7 @@
   "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ" : "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
   "close" : "Закрыть",
+  "collapse" : "Свернуть ↑",
   "comment-button" : "Комментировать",
   "comment-edited-conflict" : "Комментарий был кем-то изменён.",
   "commenting-allowed-to" : "Комментирование разрешено",
@@ -207,6 +211,7 @@
   "enable-reactions" : "Разрешить реакции",
   "enter-name" : "Введите имя...",
   "enter-text-here" : "Вводите текст тут...",
+  "expand" : "Развернуть ↓",
   "expires" : "Годен до:",
   "failure-reason" : "Причина неудачи",
   "feed-title" : {
@@ -261,6 +266,7 @@
   "hide-my-subscription" : "Скрыть мою подписку",
   "hide-post-google-play" : "Не показывать пост \"{heading}\" в Android (Google Play).",
   "hide-subscription-to-me" : "Скрыть подписку на меня",
+  "how-often-blog-search" : "Как часто ваш блог находили в Google и других поисковых системах за последнюю неделю?",
   "ignore" : "Игнорировать",
   "image" : "Картинка",
   "image-alignment" : {
@@ -459,6 +465,7 @@
   "permissions" : "Полномочия",
   "pin" : "Прикрепить",
   "pinned-post" : "Прикреплённый",
+  "popularity-blog-search" : "Популярность вашего блога в поиске",
   "post-button" : "Опубликовать",
   "post-edited-conflict" : "Пост был кем-то отредактирован.",
   "posting-not-found" : "Пост не найден или не может быть показан.",
@@ -927,6 +934,7 @@
   "view-source" : "Показать исходный текст",
   "view-source-title" : "Показать исходный текст",
   "visibility" : "Видимость",
+  "visits" : "{count} {count, plural, one {посещение} few {посещения} other {посещений}}",
   "want-allow-android-google-play" : "Я хочу, чтобы мой блог был виден в приложении Moera для Android, установленном из Google Play. Я разрешаю шерифу читать содержимое моего блога и решать (в соответствии с правилами), какие посты или комментарии следует скрыть в Moera для Android",
   "want-delete-addon" : "Вы действительно хотите удалить дополнение \"{name}\"?",
   "want-delete-draft" : "Вы действительно хотите удалить черновик?",
