--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -48,6 +48,9 @@
   "blocking-node" : "Блокування {name}",
   "blocking-reason" : "Причина блокування",
   "blocking-till" : "Блокування до",
+  "blog" : {
+    "itself" : "Сам блог"
+  },
   "blog-moved" : "Здається, блог <b>{name}</b> переїхав за новою адресою <b>{location}</b>. Бажаєте відкрити блог на новому місці?",
   "bold" : "Жирний",
   "bottom" : "У початок",
@@ -71,6 +74,7 @@
   "clipboard-contains-formatting" : "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ" : "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
   "close" : "Закрити",
+  "collapse" : "Згорнути ↑",
   "comment-button" : "Коментувати",
   "comment-edited-conflict" : "Коментар був кимось змінений.",
   "commenting-allowed-to" : "Коментування дозволене",
@@ -207,6 +211,7 @@
   "enable-reactions" : "Дозволити реакції",
   "enter-name" : "Введіть ім'я...",
   "enter-text-here" : "Введіть текст тут...",
+  "expand" : "Розгорнути ↓",
   "expires" : "Придатний до:",
   "failure-reason" : "Причина невдачі",
   "feed-title" : {
@@ -261,6 +266,7 @@
   "hide-my-subscription" : "Приховати мою підписку",
   "hide-post-google-play" : "Не показувати пост \"{heading}\" у Android (Google Play).",
   "hide-subscription-to-me" : "Приховати підписку на мене",
+  "how-often-blog-search" : "Як часто ваш блог знаходили в Google та інших пошукових системах за останній тиждень?",
   "ignore" : "Ігнорувати",
   "image" : "Картинка",
   "image-alignment" : {
@@ -459,6 +465,7 @@
   "permissions" : "Повноваження",
   "pin" : "Прикріпити",
   "pinned-post" : "Прикріплений",
+  "popularity-blog-search" : "Популярність вашого блогу в пошуку",
   "post-button" : "Опублікувати",
   "post-edited-conflict" : "Пост був кимось відредагований.",
   "posting-not-found" : "Пост не знайдений або не може бути показаний.",
@@ -927,6 +934,7 @@
   "view-source" : "Показати початковий текст",
   "view-source-title" : "Показати початковий текст",
   "visibility" : "Видимість",
+  "visits" : "{count} {count, plural, one {відвідування} few {відвідування} other {відвідувань}}",
   "want-allow-android-google-play" : "Я бажаю, щоб мій блог було видно у додатку Moera для Android, що встановлений із Google Play. Я дозволяю шерифу читати вміст мого блогу і вирішувати (відповідно до правил), які пости або коментарі слід приховати у Moera для Android",
   "want-delete-addon" : "Ви дійсно бажаєте видалити доповнення \"{name}\"?",
   "want-delete-draft" : "Ви дійсно бажаєте видалити чернетку?",
